--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <version>3.0.0-M6</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>/src/resource/testng.xml</suiteXmlFile>
+            <suiteXmlFile>src/resource/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
