added threadLocal,RemoteWebDriver,Parallel execution logic

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,3 +2,5 @@ url=https://app.box.com/login
 browser=chrome
 username=nancydhingra131@gmail.com
 password=nancy131
+remote=false
+remoteURL=http://localhost:4444/wd/hub
