--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,28 @@
     <artifactId>maven-surefire-plugin</artifactId>
     <version>3.0.0-M6</version>
 </dependency>
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.8.2</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.8.2</version>
+</dependency>
+
 
 
     
   </dependencies>
 
   <build>
+  <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+        </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
